--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
@@ -7,13 +9,18 @@
   pointer-events: none;
 }
 
+.App-header {
+  height : 25%;
+  width: 100%;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.State-header {
   background-color: #ffffff;
   min-height: 100vh;
   display: flex;
@@ -22,6 +29,79 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(0, 0, 0);
+}
+
+.App-content {
+  display: flex;
+}
+
+.sidebar {
+  display : flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 23%;
+  height : 100%;
+}
+
+.sidebar h1 {
+  margin-right: 5rem;
+}
+
+.nav-menu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.nav-menu-items{
+  width: 100%;
+}
+
+.nav-text {
+  display : flex;
+  justify-content: start;
+  align-items: center;
+  padding : 0.5rem 0rem 0.5rem 0rem;
+  list-style: none;
+  height: 20%;
+
+}
+
+.nav-text a {
+  background-color: #ffffff00;
+  color: #fff;
+  width: 8.5em;
+  text-align: right;
+  transition: all 0.6s ease;
+  text-decoration: none;
+  color : black;
+  font-size: 1.2rem;
+  width: 50%;
+  height : 100%;
+  display: flex;
+  align-items: center;
+  padding: 0rem 1rem;
+  border-radius: 0.75rem;
+}
+
+.nav-text a:hover {
+  background-color: grey;
+  color: white;
+  transition: all 0.3s ease;
+}
+.nav-text .icon {
+  display: flex;
+  transition: all 0.6s ease;
+}
+
+.nav-text .icon:hover {
+    transform: translateX(5px);
+}
+
+.nav-menu-items span{
+  padding-left: 1rem;
 }
 
 .App-link {
