--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,18 @@
   background-color: #ffffff;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(0, 0, 0);
+}
+
+.map{
+  padding-right: 100px;
+}
+
+.state-selection{
 }
 
 .App-link {
