--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,75 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+}
 
-.State-header {
+.search__input {
+  font-family: inherit;
+  font-size: inherit;
+  background-color: #f4f2f2;
+  border: none;
+  color: #646464;
+  padding: 0.7rem 1rem;
+  border-radius: 30px;
+  width: 12em;
+  transition: all ease-in-out .5s;
+  margin-right: -2rem;
+}
+
+.search__input:hover, .search__input:focus {
+  box-shadow: 0 0 1em #00000013;
+}
+
+.search__input:focus {
+  outline: none;
+  background-color: #f0eeee;
+}
+
+.search__input::-webkit-input-placeholder {
+  font-weight: 100;
+  color: #ccc;
+}
+
+.search__input:focus + .search__button {
+  background-color: #f0eeee;
+}
+
+.search__button {
+  border: none;
+  background-color: #f4f2f2;
+  margin-top: .1em;
+}
+
+.search__button:hover {
+  cursor: pointer;
+}
+
+.search__icon {
+  height: 1.3em;
+  width: 1.3em;
+  fill: #b4b4b4;
+}
+
+.StateMap {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.StateMap-Header-Text {
+  display: flex;
+  justify-content: start;
+  width: 100%;
+  font-size: 1rem;
+}
+
+
+.StateMap-header {
   background-color: #ffffff;
   min-height: 100vh;
   display: flex;
@@ -31,8 +98,18 @@
   color: rgb(0, 0, 0);
 }
 
+.StateMap-content {
+  display : flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+
 .App-content {
   display: flex;
+  flex-direction: row;
+  flex : 0 0 100%;
+  height: 100%;
 }
 
 .sidebar {
@@ -40,7 +117,7 @@
   text-align: center;
   flex-direction: column;
   justify-content: center;
-  width: 23%;
+  width: 18%;
   height : 100%;
 }
 
@@ -52,17 +129,15 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: start;
 }
 
 .nav-menu-items{
+  justify-content: start;
   width: 100%;
 }
 
 .nav-text {
-  display : flex;
-  justify-content: start;
-  align-items: center;
   padding : 0.5rem 0rem 0.5rem 0rem;
   list-style: none;
   height: 20%;
@@ -71,13 +146,14 @@
 
 .nav-text a {
   background-color: #ffffff00;
+  white-space: nowrap;
   color: #fff;
   width: 8.5em;
   text-align: right;
   transition: all 0.6s ease;
   text-decoration: none;
   color : black;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   width: 50%;
   height : 100%;
   display: flex;
@@ -92,7 +168,7 @@
   transition: all 0.3s ease;
 }
 .nav-text .icon {
-  display: flex;
+  width: 60%;
   transition: all 0.6s ease;
 }
 
@@ -103,6 +179,8 @@
 .nav-menu-items span{
   padding-left: 1rem;
 }
+
+
 
 .App-link {
   color: #61dafb;
