--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   text-align: center;
 }
 
@@ -12,6 +12,13 @@
 .App-header {
   height : 25%;
   width: 100%;
+}
+
+.App-content {
+  display: flex;
+  flex-direction: row;
+  flex : 0 0 100%;
+  height: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -73,13 +80,7 @@
   fill: #b4b4b4;
 }
 
-.StateMap {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-}
-
-.StateMap-Header-Text {
+/* .StateMap-Header-Text {
   display: flex;
   justify-content: start;
   width: 100%;
@@ -91,94 +92,14 @@
   background-color: #ffffff;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(0, 0, 0);
-}
-
-.StateMap-content {
-  display : flex;
-  flex-direction: column;
-  width: 100%;
-}
+} */
 
 
-.App-content {
-  display: flex;
-  flex-direction: row;
-  flex : 0 0 100%;
-  height: 100%;
-}
-
-.sidebar {
-  display : flex;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  width: 18%;
-  height : 100%;
-}
-
-.sidebar h1 {
-  margin-right: 5rem;
-}
-
-.nav-menu {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: start;
-}
-
-.nav-menu-items{
-  justify-content: start;
-  width: 100%;
-}
-
-.nav-text {
-  padding : 0.5rem 0rem 0.5rem 0rem;
-  list-style: none;
-  height: 20%;
-
-}
-
-.nav-text a {
-  background-color: #ffffff00;
-  white-space: nowrap;
-  color: #fff;
-  width: 8.5em;
-  text-align: right;
-  transition: all 0.6s ease;
-  text-decoration: none;
-  color : black;
-  font-size: 1.1rem;
-  width: 50%;
-  height : 100%;
-  display: flex;
-  align-items: center;
-  padding: 0rem 1rem;
-  border-radius: 0.75rem;
-}
-
-.nav-text a:hover {
-  background-color: grey;
-  color: white;
-  transition: all 0.3s ease;
-}
-.nav-text .icon {
-  width: 60%;
-  transition: all 0.6s ease;
-}
-
-.nav-text .icon:hover {
-    transform: translateX(5px);
-}
-
-.nav-menu-items span{
-  padding-left: 1rem;
-}
 
 
 
