--- a/src/components/css/SideBar.css
+++ b/src/components/css/SideBar.css
@@ -1,43 +1,63 @@
-.sidebar {
+
+.navbar{
+    height : 4rem;
     display : flex;
     text-align: center;
-    flex-direction: column;
-    justify-content: center;
-    width: 18%;
-    height : 100%;
-  }
-  
-.sidebar h1 {
-    margin-right: 1rem;
+    justify-content: start;
+    align-items: center;
+}
+
+.menu-bars {
+    margin-left: 2rem;
+    font-size : 1.3rem;
+    background: none;
 }
 
 .nav-menu {
+    background-color: #2a2a2a;
+    z-index: 2;
+    width: 15vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    top : 0;
+    left: -100%;
+    transition : 850ms;
+}
+
+.nav-menu.active {
+    left : 0;
+    transition: all 0.4s ease;
+}
+
+.nav-menu-items {
+    padding : 0.5rem;
     width: 100%;
-    height: 100%;
+}
+
+@media (min-width: 1400px) {
+    .nav-text a{
+        display: none;
+    }
+}
+.nav-text {
     display: flex;
     justify-content: start;
-}
-
-.nav-menu-items{
-    justify-content: start;
-    width: 100%;
-}
-
-.nav-text {
+    align-self: center;
     padding : 0.5rem 0rem 0.5rem 0rem;
     list-style: none;
-    height: 20%;
+    height: 3rem;
 }
 
 .nav-text a {
-    background-color: #ffffff00;
+    overflow: hidden;
     white-space: nowrap;
-    color: #fff;
     width: 8.5em;
     text-align: right;
     transition: all 0.6s ease;
     text-decoration: none;
-    color : black;
+    color : rgb(255, 255, 255);
     font-size: 1.1rem;
     width: 50%;
     height : 100%;
@@ -47,11 +67,13 @@
     border-radius: 0.75rem;
 }
 
-.nav-text a:hover {
-    background-color: grey;
-    color: white;
-    transition: all 0.3s ease;
+nav-text a:hover {
+    color: black;
+    transition: all 0.6s ease;
+    background-color: white;
 }
+
+
 
 .nav-text .icon {
     width: 60%;
@@ -64,5 +86,5 @@
 
 .nav-menu-items span{
     padding-left: 0.2rem;
-}
+} 
   
