--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -19,7 +19,8 @@
 
 .StateMap-header {
   background-color: #ffffff;
-  min-height: 100vh;
+  padding: 0rem 2rem;
+  max-height: 90vh;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -41,6 +42,7 @@
 
 .StateMap-content {
   display : flex;
-  flex-direction: column;
-  width: 100%;
+  flex-direction:row;
+  height: 50vh;
+  width: 90%;
 }
