--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -20,10 +20,8 @@
 .StateMap-header {
   background-color: #ffffff;
   padding: 0rem 2rem;
-  max-height: 90vh;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(0, 0, 0);
@@ -35,8 +33,8 @@
 
 .stack-top{
   z-index: 0.9;
-  left:-170px;
-  position:relative;
+  left: 40rem;
+  position:absolute;
 }
 
 .StateMap-content {
