--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -4,8 +4,7 @@
 }
 
 .StateMap {
-  display: flex;
-  flex-direction: row;
+  position:relative;
   justify-content: start;
 }
 
@@ -33,7 +32,10 @@
 
 .stack-top{
   z-index: 0.9;
-  left: 40rem;
+  /* left: 10rem; */
+  position:absolute;
+  top:0;
+  right:0;
   position:absolute;
 }
 
