--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -6,10 +6,11 @@
 }
 
 .table-container {
-    display: 'flex';
-    flex-direction: 'column';
-    width: '100%';
-    margin-left: 1rem;
+    display: table;
+    margin-left: 3rem;
+    background-color: white;
+    border-radius: 1rem;
+    padding: 1rem;
 }
 
 /* Font size for the axis of the cluster bubble plot */
