final changes of the day

--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -17,14 +17,12 @@
 
 
 .StateMap-header {
-  background-color: #ffffff;
   padding: 0rem 2rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(0, 0, 0);
-  padding-left: 150px;
 }
 
 .State-map{
@@ -32,7 +30,6 @@
 }
 
 .stack-top{
-  z-index: 0.9;
   top:0;
   right:0;
   position:absolute;
@@ -43,4 +40,5 @@
   flex-direction:row;
   height: 50vh;
   width: 90%;
+  background-color: #f6f8fa;
 }
