--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -1,6 +1,7 @@
 
 .navbar{
-    height: 10vh;
+    padding-top: 1rem;
+    height: 5vh;
     width: 100vw;
     display : flex;
     text-align: center;
@@ -11,6 +12,8 @@
 .navbar h1{
     padding-left: 1rem;
     padding-bottom: 0.5rem;
+    font-weight: 500;
+    color: #424751;
 }
 
 .menu-bars {
@@ -94,3 +97,12 @@ nav-text a:hover {
     padding-left: 0.2rem;
 } 
   
+hr {
+    border: 0;
+    clear:both;
+    display:block;
+    width: 100%;               
+    background-color:#d9deec;
+    /* #e8ecf4 */
+    height: 1px;
+}
