--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -14,6 +14,16 @@
     padding: 1rem;
 }
 
+.graph-container {
+    display: flex;
+    justify-content: center;
+}
+
+.recharts-cartesian-axis-tick {    
+    font-size: 1.4rem;
+    font-family: Roboto, sans-serif;
+}
+
 /* Font size for the axis of the cluster bubble plot */
 svg.recharts-surface tspan {
 	font-size: 1.5rem !important;
