--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   text-align: center;
-  background-color: #f6f8fa;
+  /* background-color: #f6f8fa; */
   height:100vh;
 }
 
