--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -7,10 +7,12 @@
 
 .table-container {
     display: table;
-    margin-left: 3rem;
+    margin-left: 5rem;
     background-color: white;
     border-radius: 1rem;
     padding: 1rem;
+    box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.22);
+    backdrop-filter: blur(0.1rem);
 }
 
 /* Font size for the axis of the cluster bubble plot */
