added react context to display map versus district

--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -6,6 +6,7 @@
 .StateMap {
   position:relative;
   justify-content: start;
+  height : 125%;
   box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.22);
   backdrop-filter: blur(0.1rem);
 }
