--- a/src/components/css/InfoCard.css
+++ b/src/components/css/InfoCard.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin-top: 2rem;
     width: 100%;
-    height: 40%;
+    height: 30%;
     background: rgba(217, 217, 217, 0.58);
     border: 1px solid white;
     box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.22);
@@ -13,9 +13,9 @@
     transition: all 0.5s;
     display: flex;
     align-items: center;
+    margin-bottom: 2rem;
     justify-content: center;
     user-select: none;
-    font-weight: bolder;
     color: black;
   }
   
