--- a/src/components/css/InfoCard.css
+++ b/src/components/css/InfoCard.css
@@ -1,9 +1,10 @@
 .card {
     box-sizing: border-box;
+    font-size: 1.5rem;
     margin-top: 2rem;
     width: 100%;
-    height: 30%;
-    background: rgba(217, 217, 217, 0.58);
+    height: 10%;
+    background: rgba(238, 238, 238, 0.58);
     border: 1px solid white;
     box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.22);
     backdrop-filter: blur(0.1rem);
