--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -40,6 +40,10 @@
   border-radius: 1rem;
 }
 
+.toggleButton-container {
+  margin: 1rem;
+}
+
 .graph-container {
   display: flex;
   justify-content: center;
