labels for cluster graph

--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -51,6 +51,13 @@
 .graph-container {
   display: flex;
   justify-content: center;
+  flex-direction: row;
+}
+
+.graph-container-row {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .recharts-cartesian-axis-tick {
