--- a/src/components/css/Distance.css
+++ b/src/components/css/Distance.css
@@ -1,19 +1,33 @@
 .Distance {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+.stepper-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height:100%;
+    width: 100%;
+    height: 3rem;
+    justify-content: start;
   }
-  
+
+  .tab-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: start;
+  }
 
 .distance-table-container {
-    display: table;
-    margin-left: 2rem;
-    background-color: white;
-    border-radius: 1rem;
-    padding: 1rem;
-    width: 100%;
-    height: 86vh;
-    box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.22);
-    backdrop-filter: blur(0.1rem);
-  }
+  display: table;
+  margin-left: 2rem;
+  background-color: white;
+  height: 130%;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 100%;
+  box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.22);
+  backdrop-filter: blur(0.1rem);
+}
