--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -9,6 +9,7 @@
   height : 125%;
   box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.22);
   backdrop-filter: blur(0.1rem);
+  border-width: 1px;
 }
 
 .StateMap-Header-Text {
