--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -5,7 +5,7 @@
 
 .StateMap {
   position:relative;
-  justify-content: start;
+  justify-content: flex-start;
   height : 110%;
   backdrop-filter: blur(0.1rem);
   border-width: 1px;
@@ -13,7 +13,7 @@
 
 .StateMap-Header-Text {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   width: 100%;
   font-size: 1rem;
 }
