--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 3rem;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .distance-options-group {
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .cluster-name {
