fixed some styling issues + ui improvements

--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -118,7 +118,7 @@ hr {
   clear: both;
   display: block;
   width: 100%;
-  background-color: #bcbec2;
+  background-color: #ffffff;
   /* #e8ecf4 */
   height: 1px;
 }
