--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -47,7 +47,7 @@
   flex-direction:row;
   height: 50vh;
   width: 100%;
-  background-color: #fefefe;
+  background-color: #ffffff;
 }
 
 .StateMap-Change-Radio{
