--- a/src/components/css/InfoCard.css
+++ b/src/components/css/InfoCard.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 10%;
     background: rgba(238, 238, 238, 0.58);
-    border: 1px solid white;
+    border: 1px solid rgb(212, 211, 211);
     backdrop-filter: blur(0.1rem);
     border-radius: 17px;
     text-align: center;
@@ -19,10 +19,6 @@
     color: black;
   }
   
-  .card:hover {
-    border: 1px solid black;
-    transform: scale(1.01);
-  }
   
   .card:active {
     transform: scale(0.97);
