district plan table/graph edits

--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -143,3 +143,7 @@ svg.recharts-surface tspan {
 .cluster-name-input-alt:focus + .cluster-name-input-border-alt {
   width: 100%;
 }
+
+.recharts-legend-item { 
+  font-size: 1.3rem; 
+}
