--- a/src/components/css/InfoCard.css
+++ b/src/components/css/InfoCard.css
@@ -1,25 +1,18 @@
 .card {
-    box-sizing: border-box;
+    border-radius: 17px;
     font-size: 1.5rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
+    font-weight: 500;
     width: 100%;
     height: 10%;
-    background: rgba(238, 238, 238, 0.58);
-    border: 1px solid rgb(212, 211, 211);
-    backdrop-filter: blur(0.1rem);
-    border-radius: 17px;
+
     text-align: center;
-    cursor: pointer;
     transition: all 0.5s;
     display: flex;
     align-items: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     justify-content: center;
     user-select: none;
     color: black;
   }
   
-  
-  .card:active {
-    transform: scale(0.97);
-  }
