--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -72,10 +72,11 @@
   overflow: hidden;
   white-space: nowrap;
   width: 8.5em;
+  font-weight: 500;
   text-align: right;
   transition: all 0.6s ease;
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-size: 1.1rem;
   width: 50%;
   height: 100%;
