--- a/src/components/css/StateMap.css
+++ b/src/components/css/StateMap.css
@@ -34,13 +34,13 @@
 .State-map{
   height : 90%;
   z-index: 1;
+  margin-bottom: 1rem;
 }
 
 .stack-top{
   top:0;
   right:0;
-  margin-top: 6rem;
-  position:absolute;
+  position: absolute;
 }
 
 .StateMap-content {
