--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 3rem;
+  margin-top: .5rem;
   justify-content: flex-start;
 }
 
@@ -24,22 +24,19 @@
 
 .table-info {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: center;
 }
 
 .ensemble-number {
+  display: flex;
+  justify-content: center;
+  text-align: center;
   background-color: rgba(238, 238, 238, 0.58);
   font-size: 1.4rem;
-  margin-top : 1rem;
-  margin-right : 24rem;
   font-weight: 500;
   padding: 1rem;
   border-radius: 1rem;
-}
-
-.cluster-number {
-  margin-right : 20rem;
 }
 
 .cluster-name {
