changed BackButton in DistanceMeasure

--- a/src/components/css/TableData.css
+++ b/src/components/css/TableData.css
@@ -63,6 +63,12 @@
   width: 95%;
 }
 
+.navigation-container {
+  display: flex; 
+  flex-direction: row; 
+  width: 100%;
+}
+
 .sub-table-container {
   display: table;
   border-radius: 1rem;
